Overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,13 @@ caption {
     background-color: rgb(118, 222, 118);
 }
 
+.container {
+    overflow: auto;
+}
+
 table {
     margin: 20px;
     font-size: 2rem;
-    overflow: auto;
 }
 
 th {
@@ -33,7 +36,7 @@ th {
 } */
 
 #Project {
-    background-color: rgb(189, 249, 99);
+    background-color: rgb(214, 244, 169);
 }
 
 
